2005-07-11  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (visit_cast): Fixed ordering of emit_cast
	arguments.

2005-07-11  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (visit_cast): Handle Character specially.

2005-07-11  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (find_method): Don't crash if argtype is
	NULL and method is not found.

2005-07-11  Tom Tromey  <tromey@redhat.com>

	* model/throwsclause.cc (get_signature): Return empty string if
	no parameterized types seen.
	* bytecode/classreader.cc (parse_signature): Handle case where
	exceptions are elided.  Clear current_method_arguments before
	parsing method signature.
	(parse_self): Require ACC_SUPER for enums.
	* bytecode/signature.cc (parse_ref_type): Exit loop if inner class
	is parameterized.

2005-07-09  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (visit_field_ref): Correctly call
	handle_invocation.

2005-07-09  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.hh (bytecode_generator::handle_invocation):
	Updated.
	* bytecode/generate.cc (handle_invocation): Added 'use_accessor'
	argument.
	(visit_method_invocation): Updated.
	(visit_type_qualified_invocation): Likewise.
	(visit_super_invocation): Likewise.
	(visit_field_ref): Likewise.
	(dereference_left_hand_side): Updated for static accessors.
	(emit_lhs_store): Likewise.
	(visit_field_ref): Likewise.
	* model/class.cc (get_accessor): Always make accessor static.
	(get_accessor): Likewise.

2005-07-08  Colin Walters  <walters@verbum.org>

	* verify.cc (class _Jv_BytecodeVerifier) <op_new>: Don't
	check for abstract classes or interfaces here; JVM spec
	says it should throw an exception, so we'll do so later.

2005-06-24  Tom Tromey  <tromey@redhat.com>

	* bytecode/verify.cc (verify_instructions_0): Correctly handle
	situation where PC falls off end.

2005-05-17  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (visit_method): Updated.
	(visit_return): Use request().